// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`core/attribution/pagerank respects explicit arguments 1`] = `
Array [
  Object {
    "parts": Array [
      "dst",
    ],
    "probability": 0.25,
  },
  Object {
    "parts": Array [
      "isolated",
    ],
    "probability": 0.25,
  },
  Object {
    "parts": Array [
      "loop",
    ],
    "probability": 0.25,
  },
  Object {
    "parts": Array [
      "src",
    ],
    "probability": 0.25,
  },
]
`;

exports[`core/attribution/pagerank snapshots as expected on the advanced graph 1`] = `
Array [
  Object {
    "parts": Array [
      "dst",
    ],
    "probability": 0.4999999999687968,
  },
  Object {
    "parts": Array [
      "isolated",
    ],
    "probability": 0.25,
  },
  Object {
    "parts": Array [
      "loop",
    ],
    "probability": 0.25,
  },
  Object {
    "parts": Array [
      "src",
    ],
    "probability": 3.120317183596679e-11,
  },
]
`;
